--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -38,10 +38,26 @@
 
   body {
     @apply bg-background text-foreground 
-    /* @apply font-body; */
+    /* @apply font-body; */;
   }
 
-  h1, h2, h3, h4, h5, h6 {
-    /* @apply font-heading; */ 
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    /* @apply font-heading; */
   }
+}
+
+/* add no drag class to elements */
+.no-drag {
+  -webkit-app-region: no-drag;
+  -webkit-user-drag: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-touch-callout: none;
 }
