--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -8,7 +8,7 @@
 
 @layer base {
   :root {
-    --background: tan;
+    --background: ;
     --foreground: 240 10% 3.9%;
     --card: 0 0% 100%;
     --card-foreground: 240 10% 3.9%;
